--- a/common_services/structuredexportmanager/pom.xml
+++ b/common_services/structuredexportmanager/pom.xml
@@ -76,7 +76,7 @@
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>framework_access</artifactId>
 			<version>1.0.59-SNAPSHOT</version>
-			<scope>test</scope>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>commons-logging</groupId>
