--- a/common_services/fao_ingestion/src/main/resources/ingestion.properties
+++ b/common_services/fao_ingestion/src/main/resources/ingestion.properties
@@ -2,23 +2,23 @@
 fedora.data.dir=%FEDORA_HOME%/data
 
 # the base directory of the EIMS CDR publications export file(s)
-eims.export.file.location = /home/frank/data/AGRIS_FAO/20090910-EIMSExport/final/
+eims.export.file.location = /home/frank/data/FAO/CDR/final/
 # the base directory of the EIMS CDR aeticles export file(s)
 eims.export.file.location.articles = /home/frank/data/AGRIS_FAO/20090910-EIMSExport/final/exportArticles/
 # the file name(s) of the EIMS CDR publications export file(s) seperated by a single white space
 # !!! the root element in all EIMS-CDR export files MUST BE changed to "eimsresources" !!!
-eims.export.file.names = eims_expmin99.xml eims_exp1999.xml eims_exp2000.xml eims_exp2001.xml eims_exp2002.xml eims_exp2003.xml eims_exp2004.xml eims_exp2005.xml eims_exp2006.xml eims_exp2007.xml eims_exp2008.xml eims_exp2009.xml eims_expnull.xml
+eims.export.file.names = eims_Before1999.xml eims_1999.xml eims_2000.xml eims_2001.xml eims_2002.xml eims_2003.xml eims_2004.xml eims_2005.xml eims_2006.xml eims_2007.xml eims_2008.xml eims_2009.xml eims_2010.xml eims_2011.xml
 # the file name(s) of the EIMS CDR articles export file(s) seperated by a single white space
 # !!! the root element in all EIMS-CDR export files MUST BE changed to "eimsresources" !!!
 eims.export.file.names.articles = eims_Articles1.xml eims_Articles2.xml eims_Articles3.xml eims_Articles4.xml eims_Articles5.xml eims_Articles6.xml eims_Articles7.xml
 # the base directory of the FAODOC export file(s)
-faodoc.export.file.location = /home/frank/data/AGRIS_FAO/20090910-FaodocExport/updated_100126/
+faodoc.export.file.location = /home/frank/data/FAO/FAODOC/final/
 # the file name(s) of the FAODOC export file(s) seperated by a single white space
 # faodoc.export.file.names = AM-1.xml AMS-1.xml AS-1.xml M-1.xml M-2.xml M-3.xml M-4.xml MS-1.xml
-faodoc.export.file.names = AM-1_result.xml AMS-1_result.xml AS-1_result.xml M-1_result.xml M-2_result.xml M-3_result.xml M-4_result.xml MS-1_result.xml
+faodoc.export.file.names = AM-2011.xml AMS-2011.xml AS-2011.xml M-0to1940_result.xml M-1940to1949_result.xml M-1950to1959_result.xml M-1960to1969_result.xml M-1970-1979_result.xml M-1980to1989_result.xml M-1990to1999_result.xml M-2000to2011_result.xml MS-2011_result.xml
 
 # the base directory of the FAO URI files derived from the WorkBench-Data.mdb
-fao.uris.file.location = /home/frank/data/AGRIS_FAO/URIs/
+fao.uris.file.location = /home/frank/data/FAO/URIs/
 # the file names of the uri files
 fao.uris.conferences = FAO-Conferences.xml
 fao.uris.corporatebodies = FAO-CorporateBodies.xml
@@ -27,10 +27,10 @@ fao.uris.projects = FAO-Projects.xml
 fao.uris.series = FAO-Series.xml
 
 # AGROVOC skos.rdf file
-fao.agrovoc.skos = file:///home/frank/data/AGRIS_FAO/URIs/ag_skos_080422.rdf
+fao.agrovoc.skos = file:///home/frank/data/FAO/URIs/ag_skos_080422.rdf
 
 # testing ...
 # faodoc.export.file.names = M-2.xml
 # the destination directory for the generated FOXML files
-fao.foxml.destination.location = /home/frank/data/AGRIS_FAO/FOXML_articles/
+fao.foxml.destination.location = /home/frank/data/FAO/FOXML_EIMS/
 
