sort order filename for jus report

--- a/common_services/transformation/src/test/resources/pubman.properties
+++ b/common_services/transformation/src/test/resources/pubman.properties
@@ -12,3 +12,4 @@ escidoc.transformation.endnote.ice.stylesheet.filename=${escidoc.transformation.
 escidoc.transformation.endnote.stylesheet.filename=${escidoc.transformation.endnote.stylesheet.filename}
 escidoc.transformation.mab.stylesheet.filename=${escidoc.transformation.mab.stylesheet.filename}
 escidoc.transformation.edoc.configuration.filename=${escidoc.transformation.edoc.configuration.filename}
+escidoc.transformation.report.sortorder.filename=${escidoc.transformation.report.sortorder.filename}
