--- a/common_services/transformation/src/main/resources/transformation.properties
+++ b/common_services/transformation/src/main/resources/transformation.properties
@@ -11,3 +11,6 @@ escidoc.transformation.endnote.ice.stylesheet.filename=${escidoc.transformation.
 escidoc.transformation.endnote.stylesheet.filename=${escidoc.transformation.endnote.stylesheet.filename}
 escidoc.transformation.mab.stylesheet.filename=${escidoc.transformation.mab.stylesheet.filename}
 escidoc.transformation.report.sortorder.filename=${escidoc.transformation.report.sortorder.filename}
+
+# InDesign namespace
+escidoc.report.indesign.namespace=${escidoc.report.indesign.namespace}
