InDesign NS for transformation service
Former-commit-id: 486ee12e2dd779f09a326a354a6c91210f2231ae

--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -246,6 +246,9 @@ escidoc.transformation.endnote.ice.stylesheet.filename=${escidoc.transformation.
 escidoc.transformation.endnote.stylesheet.filename=${escidoc.transformation.endnote.stylesheet.filename}
 escidoc.transformation.edoc.configuration.filename=${escidoc.transformation.edoc.configuration.filename}
 escidoc.transformation.mab.stylesheet.filename=${escidoc.transformation.mab.stylesheet.filename}
+escidoc.transformation.report.sortorder.filename=${escidoc.transformation.report.sortorder.filename}
+
+escidoc.report.indesign.namespace=${escidoc.report.indesign.namespace}
 
 escidoc.pubman.genres.configuration=${escidoc.pubman.genres.configuration}
 
