--- a/common_services/pom.xml
+++ b/common_services/pom.xml
@@ -223,6 +223,7 @@
 		<module>transformation</module>
 		<module>syndication_ear</module>
 		<module>syndication_presentation</module>
+		<module>reporting</module>
 		<module>sword_presentation</module>
 		<module>pid_cache_presentation</module>
 		<module>pid_cache_ear</module>
