--- a/pubman/pubman_installer/src/main/resources/pubman.properties
+++ b/pubman/pubman_installer/src/main/resources/pubman.properties
@@ -215,3 +215,11 @@ escidoc.search.and.export.default.sort.keys=${escidoc.search.and.export.default.
 escidoc.search.and.export.default.sort.order=${escidoc.search.and.export.default.sort.order}
 escidoc.search.and.export.start.record=${escidoc.search.and.export.start.record}
 escidoc.search.and.export.maximum.records=${escidoc.search.and.export.maximum.records}
+
+#External html content that can be displayed on the homepage. Different Languages are supported by adding the locale (.de, .en etc.) to the end of the provided file
+escidoc.pubman.home.content.url=${escidoc.pubman.home.content.url}
+
+#Additional survey link in meta menu
+escidoc.pubman.survey.url=${escidoc.pubman.survey.url}
+escidoc.pubman.survey.title=${escidoc.pubman.survey.title}
+escidoc.pubman.survey.text=${escidoc.pubman.survey.text}
