--- a/common_services/common_presentation/pom.xml
+++ b/common_services/common_presentation/pom.xml
@@ -31,19 +31,19 @@
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.56-SNAPSHOT</version>
+		<version>1.0.56</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
 	<artifactId>common_presentation</artifactId>
 	<packaging>war</packaging>
 	<name>common_presentation</name>
-	<version>1.0.44-SNAPSHOT</version>
+	<version>1.0.44</version>
 
 	<scm>
-		<connection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/common_presentation</connection>
-		<developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/common_presentation</developerConnection>
-		<url>https://zim02.gwdg.de/repos/common/</url>
+		<connection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.56</connection>
+		<developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.56</developerConnection>
+		<url>https://zim02.gwdg.de/repos/common/tags/common_services-1.0.56</url>
 	</scm>
 
 	<build>
