--- a/pubman/pubman_installer/src/main/resources/pubman.properties
+++ b/pubman/pubman_installer/src/main/resources/pubman.properties
@@ -92,13 +92,13 @@ framework.admin.password=
 escidoc.pubman.external.organisation.id=
 
 # eSciDoc-ObjId of the root of the OU tree (used for edoc import)
-escidoc.pubman.root.organisation.id=${escidoc.pubman.root.organisation.id}
+escidoc.pubman.root.organisation.id=
 
 # COntrolled Named Entities database interface class
 escidoc.cone.querier.class=${escidoc.cone.querier.class}
 
 # Mulgara server name
-escidoc.cone.mulgara.server.name=${escidoc.cone.mulgara.server.name}
+escidoc.cone.mulgara.server.name=
 
 # Mulgara server port
 escidoc.cone.mulgara.server.port=${escidoc.cone.mulgara.server.port}
@@ -111,7 +111,7 @@ escidoc.unapi.view.server=
 escidoc.cone.language.default=${escidoc.cone.language.default}
 
 # CoNE service URL
-escidoc.cone.service.url=${escidoc.cone.service.url}
+escidoc.cone.service.url=
 
 # CoNE database configuration
 escidoc.cone.database.driver.class=${escidoc.cone.database.driver.class}
@@ -120,6 +120,8 @@ escidoc.cone.database.server.port=
 escidoc.cone.database.name=${escidoc.cone.database.name}
 escidoc.cone.database.user.name=
 escidoc.cone.database.user.password=
+escidoc.cone.mimetype.pattern=${escidoc.cone.mimetype.pattern}
+escidoc.cone.rdfs.template=${escidoc.cone.rdfs.template}
 
 #Path to the model.xml file
 escidoc.cone.modelsxml.path=${escidoc.cone.modelsxml.path}
@@ -152,6 +154,7 @@ escidoc.pubman.blog.news=${escidoc.pubman.blog.news}
 # qa: profile for the qa server
 # production: profile for the production server
 escidoc.systemtype=production
+escidoc.pubman.logo.url=${escidoc.pubman.logo.url}
 
 # Time period between two creations of the sitemap (in minutes)
 escidoc.pubman.sitemap.task.interval=${escidoc.pubman.sitemap.task.interval}
@@ -190,9 +193,9 @@ escidoc.cone.subjectVocab=${escidoc.cone.subjectVocab}
 escidoc.pidcache.cache.size.max=${escidoc.pidcache.cache.size.max}
 escidoc.pidcache.refresh.interval=${escidoc.pidcache.refresh.interval}
 escidoc.pidcache.dummy.url=${escidoc.pidcache.dummy.url}
-escidoc.pid.gwdg.service.url=${escidoc.pid.gwdg.service.url}
+escidoc.pid.gwdg.service.url=
 escidoc.pid.gwdg.timeout=${escidoc.pid.gwdg.timeout}
-escidoc.pid.pidcache.service.url=${escidoc.pid.pidcache.service.url}
+escidoc.pid.pidcache.service.url=
 escidoc.pid.service.create.path=${escidoc.pid.service.create.path}
 escidoc.pid.service.view.path=${escidoc.pid.service.view.path}
 escidoc.pid.service.delete.path=${escidoc.pid.service.delete.path}
@@ -204,7 +207,7 @@ escidoc.pidcache.user.name=
 escidoc.pidcache.user.password=
 
 # MAB transformation property pointing to a directory where all fulltexts are stored.
-escidoc.transformation.mab.content.url.prefix=${escidoc.transformation.mab.content.url.prefix}
+escidoc.transformation.mab.content.url.prefix=
 
 escidoc.pubman.genres.configuration=${escidoc.pubman.genres.configuration}
 
@@ -223,3 +226,25 @@ escidoc.pubman.home.content.url=${escidoc.pubman.home.content.url}
 escidoc.pubman.survey.url=${escidoc.pubman.survey.url}
 escidoc.pubman.survey.title=${escidoc.pubman.survey.title}
 escidoc.pubman.survey.text=${escidoc.pubman.survey.text}
+
+#  Common presentation
+escidoc.pubman.common.presentation.url=/common/
+
+# Transformation properties
+escidoc.transformation.edoc.stylesheet.filename=${escidoc.transformation.edoc.stylesheet.filename}
+escidoc.transformation.edoc.configuration.filename=${escidoc.transformation.edoc.configuration.filename}
+escidoc.transformation.endnote.ice.stylesheet.filename=${escidoc.transformation.endnote.ice.stylesheet.filename}
+escidoc.transformation.endnote.stylesheet.filename=${escidoc.transformation.endnote.stylesheet.filename}
+escidoc.transformation.mab.stylesheet.filename=${escidoc.transformation.mab.stylesheet.filename}
+escidoc.transformation.report.sortorder.filename=${escidoc.transformation.report.sortorder.filename}
+escidoc.report.indesign.namespace=${escidoc.report.indesign.namespace}
+
+# Yearbook properties (should not be needed by installations outside the MPS)
+escidoc.pubman.yearbook.content-model.id=
+escidoc.pubman.yearbook.context.id=
+
+# Syndication properties
+escidoc.syndication.feeds.xml.path=${escidoc.syndication.feeds.xml.path}
+escidoc.syndication.maximum.records=${escidoc.syndication.maximum.records}
+escidoc.syndication.service.url=${escidoc.syndication.service.url}
+escidoc.syndication.ttl=${escidoc.syndication.ttl}
