--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -127,6 +127,9 @@ escidoc.cone.mulgara.server.port=${escidoc.cone.mulgara.server.port}
 escidoc.unapi.download.server=${escidoc.unapi.download.server}
 escidoc.unapi.view.server=${escidoc.unapi.view.server}
 
+# Dataacquisition
+escidoc.dataacquisition.service.url=${escidoc.dataacquisition.service.url}
+
 # CoNE default language abbreviation
 escidoc.cone.language.default=${escidoc.cone.language.default}
 
