Fixed tests and ICE import

--- a/common_services/transformation/src/test/resources/pubman.properties
+++ b/common_services/transformation/src/test/resources/pubman.properties
@@ -6,6 +6,8 @@ escidoc.framework_access.framework.url=${escidoc.common.framework.url}
 # eSciDoc-ObjId of the root of the OU tree (used for edoc import)
 escidoc.pubman.root.organisation.id=${escidoc.pubman.root.organisation.id}
 
+escidoc.cone.service.url=${escidoc.cone.service.url}
+
 # Transformation stylesheets
 escidoc.transformation.edoc.stylesheet.filename=${escidoc.transformation.edoc.stylesheet.filename}
 escidoc.transformation.endnote.ice.stylesheet.filename=${escidoc.transformation.endnote.ice.stylesheet.filename}
