--- a/common_services/transformation/src/main/resources/transformations/otherFormats/conf/edoc.properties
+++ b/common_services/transformation/src/main/resources/transformations/otherFormats/conf/edoc.properties
@@ -1,3 +1,3 @@
-configuration=import-name=OTHER
-import-name=FHI,BPC,CBS,MPIK,OTHER
-
+configuration=import-name=OTHER,CoNE=true
+import-name=BPC,CBS,FHI,MPIA,MPIE,MPIK,MPIMET,NPH,OTHER
+CoNE=true,false
