removed complete-name

--- a/common_services/transformation/src/main/resources/transformations/otherFormats/conf/edoc.properties
+++ b/common_services/transformation/src/main/resources/transformations/otherFormats/conf/edoc.properties
@@ -1,3 +1,3 @@
 configuration=import-name=OTHER,CoNE=true
-import-name=BPC,CBS,FHI,MPIA,MPIE,MPIK,MPIMET,NPH,OTHER
+import-name=BPC,CBS,FHI,MPIA,MPIE,MPIeR,MPIK,MPIMET,OTHER
 CoNE=true,false
