+ FHI.report.months.range property

--- a/common_services/reporting/src/main/resources/reporting.properties
+++ b/common_services/reporting/src/main/resources/reporting.properties
@@ -21,6 +21,8 @@ FHI.query=(\
 )
 FHI.sort.by=%20sortby%20"/properties/created-by/id" 
 FHI.report.formats=pdf,rtf
+#how many last months to be processed
+FHI.report.months.range=1
 FHI.sender.address=pubman@mpdl.mpg.de
 FHI.recipients.addresses=makarenko@mpdl.mpg.de,boosen@mpdl.mpg.de
 FHI.recipients.cc.addresses=makarenko@mpdl.mpg.de,makarenko@mpdl.mpg.de
