--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -68,6 +68,21 @@ escidoc.pubman.stylesheet.classic.url=${escidoc.pubman.stylesheet.classic.url}
 escidoc.pubman.stylesheet.classic.type=${escidoc.pubman.stylesheet.classic.type}
 escidoc.pubman.stylesheet.classic.apply=${escidoc.pubman.stylesheet.classic.apply}
 
+# Properties for common standard theme
+escidoc.common.stylesheet.standard.url=${escidoc.common.stylesheet.standard.url}
+escidoc.common.stylesheet.standard.type=${escidoc.common.stylesheet.standard.type}
+escidoc.common.stylesheet.standard.apply=${escidoc.common.stylesheet.standard.apply}
+
+# Properties for common contrast theme
+escidoc.common.stylesheet.contrast.url=${escidoc.common.stylesheet.contrast.url}
+escidoc.common.stylesheet.contrast.type=${escidoc.common.stylesheet.contrast.type}
+escidoc.common.stylesheet.contrast.apply=${escidoc.common.stylesheet.contrast.apply}
+
+# Properties for common classic theme
+escidoc.common.stylesheet.classic.url=${escidoc.common.stylesheet.classic.url}
+escidoc.common.stylesheet.classic.type=${escidoc.common.stylesheet.classic.type}
+escidoc.common.stylesheet.classic.apply=${escidoc.common.stylesheet.classic.apply}
+
 <!-- URL of the favicon-->
 escidoc.pubman.favicon.url=${escidoc.pubman.favicon.url}
 escidoc.pubman.favicon.apply=${escidoc.pubman.favicon.apply}
@@ -275,3 +290,16 @@ escidoc.pubman.survey.url=${escidoc.pubman.survey.url}
 escidoc.pubman.survey.title=${escidoc.pubman.survey.title}
 escidoc.pubman.survey.text=${escidoc.pubman.survey.text}
 escidoc.pubman.survey.styles=${escidoc.pubman.survey.styles}
+
+# AA
+escidoc.aa.instance.url=${escidoc.aa.instance.url}
+escidoc.aa.default.target=${escidoc.aa.default.target}
+escidoc.aa.public.key.file=${escidoc.aa.public.key.file}
+escidoc.aa.private.key.file=${escidoc.aa.private.key.file}
+
+escidoc.aa.config.file=${escidoc.aa.config.file}
+escidoc.aa.ip.table=${escidoc.aa.ip.table}
+
+#escidoc.aa.client.class=de.mpg.escidoc.services.aa.web.client.IpAaClient
+escidoc.aa.client.start.class=${escidoc.aa.client.start.class}
+escidoc.aa.client.finish.class=${escidoc.aa.client.finish.class}
