--- a/pubman/pubman_ear/pom.xml
+++ b/pubman/pubman_ear/pom.xml
@@ -40,6 +40,11 @@
 						</webModule>
 						<webModule>
 							<groupId>de.mpg.escidoc.services</groupId>
+							<artifactId>aa_presentation</artifactId>
+							<contextRoot>/auth</contextRoot>
+						</webModule>
+						<webModule>
+							<groupId>de.mpg.escidoc.services</groupId>
 							<artifactId>search_presentation</artifactId>
 							<contextRoot>/search</contextRoot>
 						</webModule>
@@ -392,6 +397,11 @@
 							<artifactId>geoip</artifactId>
 							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
+						<jarModule>
+							<groupId>de.mpg.escidoc.services</groupId>
+							<artifactId>aa_logic</artifactId>
+							<includeInApplicationXml>true</includeInApplicationXml>
+						</jarModule>
 					</modules>
 				</configuration>
 			</plugin>
@@ -538,6 +548,19 @@
 			<version>1.0.45-SNAPSHOT</version>
 			<scope>compile</scope>
 			<type>ejb</type>
+		</dependency>
+		<dependency>
+			<groupId>de.mpg.escidoc.services</groupId>
+			<artifactId>aa_presentation</artifactId>
+			<version>0.1.0-SNAPSHOT</version>
+			<scope>compile</scope>
+			<type>war</type>
+		</dependency>
+		<dependency>
+			<groupId>de.mpg.escidoc.services</groupId>
+			<artifactId>aa_logic</artifactId>
+			<version>0.1.0-SNAPSHOT</version>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>xmlbeans</groupId>
